fix overflow-y

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3310,6 +3310,7 @@ textarea:active,
 
 .katex-display > .katex {
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 /*------------------ Fluidity response ------------------------------*/
